# game-blog-api

./: .env.example  .flake8  .gitignore  README.md  alembic.ini  bak_flake8.ini  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20240811-2113_.py  20240822-2228_.py
app/: app_manager.py  logger_config.yaml  main.py
app/api/apps/: admin_app.py
app/api/endpoints/: admin.py  auth.py  games.py  users.py
app/core/: auth.py  config.py  database.py
app/core/logger/: logger.py
app/crud/: __init__.py  base.py  game.py  user.py
app/exceptions/: core.py  error_messages.py
app/models/: __init__.py  base.py  games.py  games_reviews.py  reviews.py  scores.py  users.py  users_reviews.py
app/schemas/: __init__.py  core.py  game.py  language_analyzer.py  request_info.py  review.py  score.py  token.py  user.py
docs/: mkdocs.yml
seeder/: run.py
seeder/seeds_json/: users.json
