[tool.poetry]
name = "game-blog-api"
version = "0.1.0"
description = ""
authors = ["araki777 <arakichi777@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
sentry-sdk = "^2.12.0"
pydantic-settings = "^2.4.0"
PyYAML = "^6.0.2"
fastapi-debug-toolbar = "^0.6.3"
SQLAlchemy = "^2.0.32"
python-jose = "^3.3.0"
passlib = "^1.7.4"
flake8 = "^7.1.1"
alembic = "^1.13.2"
mkdocs = "^1.6.0"
mypi = "^0.0.3"
ulid = "^1.1"
fire = "^0.6.0"
sqlalchemyseed = "^2.0.0"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
python-json-logger = "^2.0.7"
email-validator = "^2.2.0"
python-multipart = "^0.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.rye]
managed = true
dev-dependencies = ["ruff~=0.0.270"]
[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py310"
select = ["ALL"]
exclude = [".venv", "alembic"]
ignore = [
    "G004", # `logging-f-string`
    "PLC1901", # compare-to-empty-string
    "PLR2004", # magic-value-comparison
    "ANN101", # missing-type-self
    "ANN102", # missing-type-cls
    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs
    "ANN401", # any-type
    "ERA", # commented-out-code
    "ARG002", # unused-method-argument
    "INP001", # implicit-namespace-package
    "PGH004", # blanket-noqa
    "B008", # Dependsで使用するため
    "A002", # builtin-argument-shadowing
    "A003", # builtin-attribute-shadowing
    "PLR0913", # too-many-arguments
    "RSE", # flake8-raise
    "D", # pydocstyle
    "C90", # mccabe
    "T20", # flake8-print
    "SLF", #  flake8-self
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "TRY", # tryceratops
    "COM", # flake8-commas
    "S", # flake8-bandit
    "EM",#flake8-errmsg
    "EXE", # flake8-executable
    "ICN", # flake8-import-conventions
    "RET",#flake8-return
    "SIM",#flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", #pathlibを使わないコードが多いので、除外する
    "ISC", #flake8-implicit-str-concat
    "N", # pep8-naming
    "PT", # flake8-pytest-style
    "RUF012", # pydanticとの相性が悪いので一旦無効化
    "TD002",
    "TD003",
    "FIX002" # TODOの記述がエラーになるため
]
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]